---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: "<div class=\"container\">\n    <h1>Header</h1>\n    "
      span:
        start: 0
        length: 48
  - Block:
      block_type: Standard
      name: if
      bits:
        - if
        - user.is_authenticated
      children:
        - Text:
            content: "\n        "
            span:
              start: 87
              length: 9
        - Comment:
            content: This if is unclosed which does matter
            span:
              start: 87
              length: 41
        - Text:
            content: "\n        <p>Welcome "
            span:
              start: 139
              length: 20
        - Variable:
            bits:
              - user
              - name
            filters: []
            span:
              start: 153
              length: 9
        - Text:
            content: "</p>\n        <div>\n            "
            span:
              start: 165
              length: 31
        - Comment:
            content: "This div is unclosed which doesn't matter"
            span:
              start: 196
              length: 45
        - Text:
            content: "\n        "
            span:
              start: 252
              length: 9
        - Block:
            block_type: Standard
            name: for
            bits:
              - for
              - item
              - in
              - items
            children:
              - Text:
                  content: "\n            <span>"
                  span:
                    start: 288
                    length: 19
              - Variable:
                  bits:
                    - item
                  filters: []
                  span:
                    start: 297
                    length: 4
              - Text:
                  content: "</span>\n        "
                  span:
                    start: 304
                    length: 16
              - Block:
                  block_type: Closing
                  name: endfor
                  bits: []
                  children: ~
                  span:
                    start: 320
                    length: 11
                  tag_span:
                    start: 252
                    length: 17
            span:
              start: 252
              length: 79
            tag_span:
              start: 252
              length: 17
        - Text:
            content: "\n    <footer>Page Footer</footer>\n</div>"
            span:
              start: 337
              length: 40
      span:
        start: 48
        length: 0
      tag_span:
        start: 48
        length: 24
line_offsets:
  - 0
  - 24
  - 44
  - 79
  - 131
  - 170
  - 184
  - 244
  - 276
  - 312
  - 333
  - 366
errors:
  - UnclosedTag: if
